Dependencies uplift