@@ -8,6 +8,9 @@
         <artifactId>eiffel-remrem-generate</artifactId>
         <version>${eiffel-remrem-generate.version}</version>
     </parent>
+    <properties>
+        <start-class>com.ericsson.eiffel.remrem.generate</start-class>
+    </properties>
     <artifactId>generate-service</artifactId>
     <packaging>war</packaging>
     <dependencies>
@@ -45,21 +48,16 @@
             		<groupId>org.junit.jupiter</groupId>
             		<artifactId>junit-jupiter</artifactId>
             	</exclusion>
-            	<!-- <exclusion>
-            		<groupId>org.mockito</groupId>
-            		<artifactId>mockito-junit-jupiter</artifactId>
-            	</exclusion> -->
             </exclusions>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.5.1</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
-            <version>4.5.1</version>
+            <version>${mockito.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -105,6 +103,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
         </dependency>
+        <dependency>
+           <groupId>javax.servlet</groupId>
+           <artifactId>javax.servlet-api</artifactId>
+           <version>3.0.1</version>
+           <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -114,7 +118,6 @@
 				<version>${springboot.version}</version>
 		        <configuration>    
                     <mainClass>com.ericsson.eiffel.remrem.generate.App</mainClass>
-                    <fork>true</fork>
                     <skip>false</skip>
                 </configuration>
                 <executions>
@@ -145,12 +148,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-<!--                <version>2.22.0</version>-->
-                <version>3.0.0-M7</version>
+                <version>2.22.0</version>
                 <configuration>
-                    <additionalClasspathElements>
-                        <additionalClasspathElement>/home/zsztrom/.m2/repository/com/github/eiffel-community/eiffel-remrem-semantics/2.2.3-openjdk17/eiffel-remrem-semantics-2.2.3-openjdk17.jar</additionalClasspathElement>
-                    </additionalClasspathElements>
+                    <!-- Allow JUnit to access the test classes -->
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/jdk.internal.reflect=ALL-UNNAMED</argLine>
+
                 </configuration>
             </plugin>
             <plugin>
@@ -158,8 +161,8 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <!-- Integration tests are failing with 2.21.0 version of maven-failsafe-plugin 
                     so using 2.20.1 version -->
-<!--                <version>2.22.0</version>-->
-                <version>3.0.0-M7</version>
+                <version>2.22.0</version>
+<!--                <version>3.0.0-M7</version>-->
                 <executions>
                     <execution>
                         <id>integration-test</id>
